[package]
name = "vos-ast"
version = "0.1.0"
authors = ["Aster <192607617@qq.com>"]
description = "..."
repository = "https://github.com/voml/vos-rs"
homepage = "https://github.com/voml/vos-rs"
documentation = "https://docs.rs/vos-ast"
readme = "Readme.md"
license = "MPL-2.0"
edition = "2021"

[dependencies]
indexmap = "1.9.1"
num = "0.4.0"
bigdecimal = "0.3.0"
peginator = "0.3.0"
unicode-ident = "1.0.5"

[dependencies.vos-error]
version = "0.2.1"
path = "../vos-error"
features = ["bigdecimal", "peginator"]

[dev-dependencies]

[build-dependencies]
peginator = "0.3.0"

[features]
default = []

