[package]
name = "vos-error"
version = "0.1.1"
authors = ["Aster <192607617@qq.com>"]
description = "Virtual Object Schema shared error types"
repository = "https://github.com/oovm/sub_projects"
documentation = "https://docs.rs/vos-error"
readme = "Readme.md"
license = "MPL-2.0"
edition = "2021"

[dependencies]
peginator = { version = "0.3.0", optional = true }
num = { version = "0.4.0", optional = true }
bigdecimal = { version = "0.3.0", optional = true }

[dev-dependencies]

[features]
default = []

[package.metadata.docs.rs]
all-features = true
