[package]
name = "vos-from-json-schema"
version = "0.0.0"
authors = ["Aster <192607617@qq.com>"]
description = "..."
repository = "https://github.com/oovm/sub_projects"
documentation = "https://docs.rs/vos-ast"
readme = "Readme.md"
license = "MPL-2.0"
edition = "2021"

[dependencies]
jsonschema = "0.16.1"
valico = "3.6.1"
serde_json = "1.0.87"
indexmap = "1.9.1"
vos-ast = "0.1.0"
num = "0.4.0"
reqwest = { version = "0.11.12", features = [ "rustls-tls" ] }

[dependencies.vos-error]
version= "0.2.3"
features = ["num"]

[dev-dependencies]

[build-dependencies]
peginator = "0.3.0"

[features]
default = []
