[package]
name = "vos-from-protobuf"
version = "0.0.0"
authors = ["Aster <192607617@qq.com>"]
description = "..."
repository = "https://github.com/oovm/sub_projects"
documentation = "https://docs.rs/vos-ast"
readme = "Readme.md"
license = "MPL-2.0"
edition = "2021"

[dependencies]
indexmap = "1.9.1"
vos-ast = "0.0.0"
num = "0.4.0"
quick-protobuf = "0.8.0"

[dependencies.vos-error]
version= "0.1.1"
features = ["num"]

[dev-dependencies]

[build-dependencies]
peginator = "0.3.0"

[features]
default = []
