[package]
name = "vos-validator"
version = "0.0.0"
authors = ["Aster <192607617@qq.com>"]
description = "..."
repository = "https://github.com/oovm/sub_projects"
documentation = "https://docs.rs/vos-ast"
readme = "Readme.md"
license = "MPL-2.0"
edition = "2021"

[dependencies]
indexmap = "1.9.1"
peginator = "0.3.0"
unicode-ident = "1.0.5"
vos-error = "0.1.0"

[dev-dependencies]

[build-dependencies]
peginator = "0.3.0"

[features]
default = []
